@@ -1,3 +1,8 @@
+2000-04-18  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
+
+	* glib.h: Changed comment for g_getenv to reflect, that the
+	returned memory must not be freed. Fixes Bug #8983.
+
 2000-04-17  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* configure.in, acconfig.h: Add configure test for garbage
